--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
     <!-- Botón flotante de WhatsApp -->
     <div id="whatsapp-float" class="whatsapp-float">
-        <a id="whatsapp-link" class="whatsapp-icon" href="#" target="_blank">
+        <a id="whatsapp-link" class="whatsapp-icon" href="wa.me/50684703754" target="_blank">
             <img src="imgs/whatsapp-icon.png" alt="WhatsApp">
         </a>
     </div>
